# quasistatic_simulator

./: .gitignore
models/: allegro_hand_description_right_spheres.sdf  cylinder.sdf  cylinder_xy_yaw.sdf  iiwa7_planar_real_collision.sdf  iiwa7_planar_sphere_collision.sdf  iiwa7_real_collision.sdf  iiwa_real_collision_bimanual.yml  iiwa_real_collision_bimanual_planar.yml  pointed_fingertip.sdf  pointed_fingertip.yml
models/q_sys/: iiwa_real_bimanual_cylinder.yml  iiwa_real_planar_bimanual_box.yml  pointed_fingertip_and_sphere.yml
models/yongpeng/: models
models/yongpeng/allegro_hand_description/: allegro_hand_description_right.urdf  allegro_hand_right_ball.gv
models/yongpeng/allegro_hand_description/object_single/: sphere_r0.06m.urdf
models/yongpeng/allegro_hand_description/robot_obj_combined/: allegro_hand_description_right_ball_scene.urdf
models/yongpeng/allegro_hand_description/robot_single/: allegro_hand_description_right.urdf  allegro_hand_description_right_v2.urdf
models/yongpeng/allegro_hand_description/sdf/: allegro_hand_description_right.sdf
models/yongpeng/allegro_hand_description/srdf/: allegro_hand_right_autogen.srdf  allegro_hand_right_userdefine.srdf
models/yongpeng/models/mjcf/: allegro_3d_thumb.xml  dex_2d.xml  scene_only.xml  scene_right_sphere.xml
models/yongpeng/models/sdf/: allegro_3d_2finger.sdf  allegro_3d_4finger.sdf  allegro_3d_4finger_no_palm.sdf  allegro_3d_cube_z.sdf  allegro_3d_sphere.sdf  allegro_3d_sphere_z.sdf  allegro_3d_sphere_z2.sdf  allegro_3d_table.sdf  dex_2d_obj.sdf  dex_2d_robot.sdf  table_top.sdf
models/yongpeng/models/urdf/: allegro_3d_full.urdf  allegro_3d_sphere.urdf  dex_2d_obj.urdf  dex_2d_robot.urdf  push_2d.urdf  test_pinocchio.py
models/yongpeng/models/yml/: allegro_3d.yml  allegro_3d_2finger.yml  allegro_3d_4finger.yml  allegro_3d_4finger_no_palm.yml  allegro_3d_4finger_upside_down.yml  allegro_3d_ext_contacts.yml  allegro_3d_full.yml  allegro_3d_full_zrot.yml  allegro_3d_full_zrot_cube.yml  dex_2d.yml  dex_2d_robot.yml  push_2d.yml  push_2d_robot.yml
qsim/: model_paths.py  system.py
qsim_old/: problem_definition_pinch.py
quasistatic_simulator_cpp/: CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  compile_commands.json
quasistatic_simulator_cpp/bindings/: CMakeLists.txt  contact_ctrl_cpp.cc  qsim_cpp.cc
quasistatic_simulator_cpp/controllers/: CMakeLists.txt  contact_controller.cc  contact_controller.h  contact_controller_params.h  contact_model.cc  contact_model.h
quasistatic_simulator_cpp/diffcp/: log_barrier_solver.cc  socp_derivatives.cc  socp_derivatives.h
quasistatic_simulator_cpp/qsim/: CMakeLists.txt  contact_jacobian_calculator.cc  contact_jacobian_calculator.h  get_model_paths.cc  pinocchio_calculator.cc  pinocchio_calculator.h  quasistatic_sim_params.h  quasistatic_simulator.cc  quasistatic_simulator.h
quasistatic_simulator_cpp/tests/: test_qp_solver.cc
quasistatic_simulator_cpp/tests_yongpeng/: CMakeLists.txt  test_contact_controller.py  test_contact_jacobian_pinocchio.cc  test_contact_jacobian_pinocchio.cpp  test_mosek_solver.cpp  test_pinocchio.cpp  test_pinocchio.py  test_pinocchio_calculator.cpp
setup/: id_ed25519  id_ed25519.pub  install_mosek.sh  install_pinocchio.sh  mosek.lic  qsim.dockerfile  requirements.txt  run_tests.sh
